<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.curiositiesquiz.MainActivity"
    android:isScrollContainer="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_style1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/name_header"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_style2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/iss1"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/first_question"
                android:textColor="#000000"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/first_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/first_button_in_first_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_answer_in_first_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/second_answer_in_first_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_answer_in_first_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/third_answer_in_first_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_answer_in_first_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/fourth_answer_in_first_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_answer_in_first_question"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_style1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bug"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/second_question"
                android:textColor="#000000"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/second_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/first_answer_in_second_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_answer_in_second_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/second_answer_in_second_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_answer_in_second_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/third_answer_in_second_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_answer_in_second_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/fourth_answer_in_second_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_answer_in_second_question"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_style2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/earth_sun"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/third_question"
                android:textColor="#000000"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/third_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/first_answer_in_third_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_answer_in_third_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/second_answer_in_third_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_answer_in_third_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/third_answer_in_third_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_answer_in_third_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/fourth_answer_in_third_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_answer_in_third_question"
                    android:textSize="16sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_style1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/monkey"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/fourth_question"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/clarification_to_fourth_question"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/first_answer_in_fourth_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/first_answer_in_fourth_question"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/second_answer_in_fourth_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/second_answer_in_fourth_question"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/third_answer_in_fourth_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/third_answer_in_fourth_question"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/fourth_answer_in_fourth_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/fourth_answer_in_fourth_question"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_style2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/alcapone"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/fifth_question"
                android:textColor="#000000"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/fourth_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/first_answer_in_fifth_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_answer_in_fifth_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/second_answer_in_fifth_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_answer_in_fifth_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/third_answer_in_fifth_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_answer_in_fifth_question"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/fourth_answer_in_fifth_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_answer_in_fifth_question"
                    android:textSize="16sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_style1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/polar_bear"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/sixth_question"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/sixth_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sixth_question"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_style2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/get_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="getScore"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:text="@string/get_score"
                android:textSize="12sp" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="reset"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/reset"
                android:textSize="12sp" />

            <Button
                android:id="@+id/see_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="seeAnswers"
                android:padding="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/see_answers"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
